--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.0.2",
   "license": "MIT",
   "description": "Angular utilities for writing code the @lernato way.",
-  "author": "BJ Anderson",
+  "author": "Lernato, LLC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bjanderson/lernato-common.git"
+    "url": "https://github.com/LernatoLLC/common.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
