--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@lernato/common",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "license": "MIT",
-  "description": "Angular utilities for writing code the @lernato way.",
+  "description": "JavaScript utilities for writing code the Lernato way.",
   "author": "Lernato, LLC",
   "repository": {
     "type": "git",
@@ -25,22 +25,28 @@
     "test:cov": "jest --coverage",
     "test:watch": "jest --clearCache && jest --coverage --watch"
   },
+  "dependencies": {
+    "inquirer": "7.0.0"
+  },
   "devDependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jasmine": "3.4.5",
+    "@types/jest": "24.0.21",
     "jest": "24.9.0",
+    "prettier": "1.18.2",
     "rimraf": "3.0.0",
-    "ts-jest": "24.0.2",
-    "tslint": "5.18.0",
+    "ts-jest": "24.1.0",
+    "ts-node": "8.4.1",
+    "tslint": "5.20.0",
+    "tslint-config-airbnb": "5.11.2",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.0.1",
     "typedoc": "0.15.0",
-    "typescript": "3.5.3"
+    "typescript": "3.6.4"
   },
   "files": [
     "dist/",
     "package.json",
     "README.md",
     "LICENSE"
-  ],
-  "dependencies": {
-    "inquirer": "6.5.1"
-  }
+  ]
 }
