--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["./src/*"]
-    },
     "declaration": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["esnext"],
     "module": "commonjs",
     "outDir": "./dist",
+    "rootDir": "./src",
     "target": "es5",
-    "lib": ["es2018", "dom"],
     "types": ["jest"]
   },
   "exclude": ["coverage", "dist", "doc", "jest", "node_modules", "**/*.spec.ts"]
