--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jasmine": "3.4.5",
     "@types/jest": "24.0.21",
     "jest": "24.9.0",
+    "moment": "2.24.0",
     "prettier": "1.18.2",
     "rimraf": "3.0.0",
     "ts-jest": "24.1.0",
