--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test:cov": "jest --coverage",
     "test:watch": "jest --clearCache && jest --coverage --watch"
   },
-  "dependencies": {
-    "inquirer": "7.0.0"
+  "peerDependencies": {
+    "moment": "^2.0.0"
   },
   "devDependencies": {
     "@types/jasmine": "3.4.5",
