--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "tsc && npm run fix-ts-paths",
     "fix-ts-paths": "node scripts/fix-ts-paths.js",
     "doc": "typedoc --out ../docs/common src/**/*.ts",
-    "lint": "tslint --project tsconfig.json 'src/**/*.ts'",
+    "lint": "eslint ./src --ext .js,.ts",
     "prepush": "npm run build",
     "push": "npm publish --access public",
     "push:major": "npm version major --no-git-tag-version && npm run push",
@@ -26,22 +26,31 @@
     "test:watch": "jest --clearCache && jest --coverage --watch"
   },
   "peerDependencies": {
-    "moment": "^2.0.0"
+    "moment": "^2.24.0"
   },
   "devDependencies": {
-    "@types/jasmine": "3.4.5",
-    "@types/jest": "24.0.21",
-    "jest": "24.9.0",
+    "@types/jasmine": "3.5.5",
+    "@types/jest": "25.1.2",
+    "@typescript-eslint/eslint-plugin": "2.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "2.20.0",
+    "@typescript-eslint/parser": "2.20.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsdoc": "21.0.0",
+    "eslint-plugin-json": "2.0.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "import": "0.0.6",
+    "jest": "25.1.0",
     "moment": "2.24.0",
-    "prettier": "1.18.2",
-    "rimraf": "3.0.0",
-    "ts-jest": "24.1.0",
-    "ts-node": "8.4.1",
-    "tslint": "5.20.0",
-    "tslint-config-airbnb": "5.11.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "typedoc": "0.15.0",
+    "prettier": "1.19.1",
+    "rimraf": "3.0.2",
+    "ts-jest": "25.2.1",
+    "ts-node": "8.6.2",
+    "tslint": "5.20.1",
+    "typedoc": "0.16.10",
     "typescript": "3.6.4"
   },
   "files": [
