--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,5 @@ insert_final_newline = true
 max_line_length = 100
 trim_trailing_whitespace = true
 
-[*.md]
+[{*.md,*.json}]
 max_line_length = off
-trim_trailing_whitespace = false
