--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,25 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-coverage/
-dist/
-doc/
-out-tsc/
-package/
-tmp/
-
 # dependencies
 /node_modules
+
+# compiled output
+/bazel-out
+/coverage
+/dist
+/out-tsc
+/tmp
+
+#cypress
+/cypress/screenshots
+/cypress/videos
+
+#data
+/data/*.json
+
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
 
 # IDE - VSCode
 .vscode/*
@@ -17,17 +27,30 @@ tmp/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
+
+#packages
+*.bz2
+*.gz
+*.tar
+*.zip
+
+#certs
+*.crt
+*.csr
+*.key
+*.p12
+*.srl
+*.pub
 
 # misc
-.sass-cache/
-connect.lock/
-
-libpeerconnection.log/
+/.sass-cache
+/connect.lock
+/coverage
+/typings
 *.log
-typings/
+npm-debug.log*
 
 # System Files
 .DS_Store
 Thumbs.db
-
-*.tgz
