--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc && npm run fix-ts-paths",
+    "build": "tsc",
     "fix-ts-paths": "node scripts/fix-ts-paths.js",
     "doc": "typedoc --out ../docs/common src/**/*.ts",
     "lint": "eslint ./src --ext .js,.ts",
@@ -29,8 +29,7 @@
     "moment": "^2.24.0"
   },
   "devDependencies": {
-    "@types/jasmine": "3.5.5",
-    "@types/jest": "25.1.2",
+    "@types/jest": "25.1.3",
     "@typescript-eslint/eslint-plugin": "2.20.0",
     "@typescript-eslint/eslint-plugin-tslint": "2.20.0",
     "@typescript-eslint/parser": "2.20.0",
@@ -40,7 +39,7 @@
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsdoc": "21.0.0",
-    "eslint-plugin-json": "2.0.1",
+    "eslint-plugin-json": "2.1.0",
     "eslint-plugin-prettier": "3.1.2",
     "import": "0.0.6",
     "jest": "25.1.0",
@@ -48,10 +47,9 @@
     "prettier": "1.19.1",
     "rimraf": "3.0.2",
     "ts-jest": "25.2.1",
-    "ts-node": "8.6.2",
     "tslint": "5.20.1",
     "typedoc": "0.16.10",
-    "typescript": "3.6.4"
+    "typescript": "3.8.2"
   },
   "files": [
     "dist/",
