--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@lernato/common",
-  "version": "4.2.0",
+  "name": "@bj.anderson/utils",
+  "version": "5.0.1",
   "license": "MIT",
-  "description": "JavaScript utilities for writing code the Lernato way.",
-  "author": "Lernato, LLC",
+  "description": "JavaScript utilities for writing clean code.",
+  "author": "BJ Anderson",
   "repository": {
     "type": "git",
-    "url": "https://github.com/LernatoLLC/common.git"
+    "url": "git@github.com:bjanderson/utils.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
