--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bj.anderson/utils",
-  "version": "5.3.0",
+  "version": "5.4.0",
   "license": "MIT",
   "description": "JavaScript utilities for writing clean code.",
   "author": "BJ Anderson",
@@ -15,12 +15,13 @@
     "build": "tsc",
     "fix-ts-paths": "node scripts/fix-ts-paths.js",
     "doc": "typedoc --out ../docs/common src/**/*.ts",
-    "lint": "eslint ./src --ext .js,.ts",
+    "lint": "eslint ./src --ext .ts",
     "prepush": "npm run build",
     "push": "npm publish --access public",
     "push:major": "npm version major --no-git-tag-version && npm run push",
     "push:minor": "npm version minor --no-git-tag-version && npm run push",
     "push:patch": "npm version patch --no-git-tag-version && npm run push",
+    "start": "npm run build",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:watch": "jest --clearCache && jest --coverage --watch"
@@ -29,27 +30,27 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
-    "@types/jest": "26.0.20",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
-    "eslint": "7.17.0",
+    "@types/jest": "26.0.22",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
+    "eslint": "7.23.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-import-resolver-typescript": "2.3.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "31.0.3",
+    "eslint-plugin-jsdoc": "32.3.0",
     "eslint-plugin-json": "2.1.2",
     "eslint-plugin-prettier": "3.3.1",
     "import": "0.0.6",
     "jest": "26.6.3",
-    "moment": "2.24.0",
+    "moment": "2.29.1",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.4.4",
+    "ts-jest": "26.5.4",
     "tslint": "5.20.1",
-    "typedoc": "0.20.14",
-    "typescript": "4.1.3"
+    "typedoc": "0.20.34",
+    "typescript": "4.2.3"
   },
   "files": [
     "dist/",
