--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@bj.anderson/utils",
-  "version": "5.4.0",
+  "name": "@bjanderson/utils",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "JavaScript utilities for writing clean code.",
   "author": "BJ Anderson",
+  "publishConfig": {
+    "@bjanderson:registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:bjanderson/utils.git"
@@ -16,11 +19,10 @@
     "fix-ts-paths": "node scripts/fix-ts-paths.js",
     "doc": "typedoc --out ../docs/common src/**/*.ts",
     "lint": "eslint ./src --ext .ts",
-    "prepush": "npm run build",
-    "push": "npm publish --access public",
-    "push:major": "npm version major --no-git-tag-version && npm run push",
-    "push:minor": "npm version minor --no-git-tag-version && npm run push",
-    "push:patch": "npm version patch --no-git-tag-version && npm run push",
+    "prepublish": "npm run build",
+    "push:major": "npm version major --no-git-tag-version",
+    "push:minor": "npm version minor --no-git-tag-version",
+    "push:patch": "npm version patch --no-git-tag-version",
     "start": "npm run build",
     "test": "jest",
     "test:cov": "jest --coverage",
@@ -30,27 +32,27 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
-    "@types/jest": "26.0.22",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
-    "eslint": "7.23.0",
+    "@types/jest": "26.0.23",
+    "@typescript-eslint/eslint-plugin": "4.28.1",
+    "@typescript-eslint/eslint-plugin-tslint": "4.28.1",
+    "@typescript-eslint/parser": "4.28.1",
+    "eslint": "7.29.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "32.3.0",
-    "eslint-plugin-json": "2.1.2",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsdoc": "35.4.1",
+    "eslint-plugin-json": "3.0.0",
+    "eslint-plugin-prettier": "3.4.0",
     "import": "0.0.6",
     "jest": "26.6.3",
     "moment": "2.29.1",
-    "prettier": "2.2.1",
+    "prettier": "2.3.2",
     "rimraf": "3.0.2",
-    "ts-jest": "26.5.4",
+    "ts-jest": "26.5.6",
     "tslint": "5.20.1",
-    "typedoc": "0.20.34",
-    "typescript": "4.2.3"
+    "typedoc": "0.21.2",
+    "typescript": "4.3.4"
   },
   "files": [
     "dist/",
