--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bjanderson/utils",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "license": "MIT",
   "description": "JavaScript utilities for writing clean code.",
   "author": "BJ Anderson",
@@ -20,9 +20,9 @@
     "doc": "typedoc --out ../docs/common src/**/*.ts",
     "lint": "eslint ./src --ext .ts",
     "prepublish": "npm run build",
-    "push:major": "npm version major --no-git-tag-version",
-    "push:minor": "npm version minor --no-git-tag-version",
-    "push:patch": "npm version patch --no-git-tag-version",
+    "push:major": "npm version major",
+    "push:minor": "npm version minor",
+    "push:patch": "npm version patch",
     "start": "npm run build",
     "test": "jest",
     "test:cov": "jest --coverage",
