--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fix-ts-paths": "node scripts/fix-ts-paths.js",
     "doc": "typedoc --out ../docs/common src/**/*.ts",
     "lint": "eslint ./src --ext .ts",
-    "prepublish": "npm run build",
+    "prepublish": "npm install && npm run build",
     "push:major": "npm version major",
     "push:minor": "npm version minor",
     "push:patch": "npm version patch",
