--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           node-version: 12
       - run: npm install
+      - run: npm run build
       - run: npm test
+      - run: npm publish
 
   publish-gpr:
     needs: build
