--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -180,6 +180,7 @@
     "@typescript-eslint/no-parameter-properties": "off",
     "@typescript-eslint/no-require-imports": "warn",
     "@typescript-eslint/no-this-alias": "warn",
+    "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-use-before-define": "off",
