--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bjanderson/utils",
-  "version": "1.8.0",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "JavaScript utilities for writing clean code.",
   "author": "BJ Anderson",
@@ -20,39 +20,35 @@
     "doc": "typedoc --out ./docs/utils src/**/*.ts",
     "lint": "eslint ./src --ext .ts",
     "prepublish": "npm run build",
-    "push:major": "npm version major",
-    "push:minor": "npm version minor",
-    "push:patch": "npm version patch",
+    "push:major": "npm version major --no-git-tag-version",
+    "push:minor": "npm version minor --no-git-tag-version",
+    "push:patch": "npm version patch --no-git-tag-version",
     "start": "npm run build",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:watch": "jest --clearCache && jest --coverage --watch"
   },
-  "peerDependencies": {
-    "moment": "^2.29.1"
-  },
   "devDependencies": {
-    "@types/jest": "26.0.23",
-    "@typescript-eslint/eslint-plugin": "4.28.1",
-    "@typescript-eslint/eslint-plugin-tslint": "4.28.1",
-    "@typescript-eslint/parser": "4.28.1",
-    "eslint": "7.29.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsdoc": "35.4.1",
-    "eslint-plugin-json": "3.0.0",
-    "eslint-plugin-prettier": "3.4.0",
+    "@types/jest": "29.0.2",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/eslint-plugin-tslint": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
+    "eslint": "8.23.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "39.3.6",
+    "eslint-plugin-json": "3.1.0",
+    "eslint-plugin-prettier": "4.2.1",
     "import": "0.0.6",
-    "jest": "26.6.3",
-    "moment": "2.29.1",
-    "prettier": "2.3.2",
+    "jest": "29.0.3",
+    "prettier": "2.7.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.5.6",
+    "ts-jest": "29.0.1",
     "tslint": "5.20.1",
-    "typedoc": "0.21.2",
-    "typescript": "4.3.4"
+    "typedoc": "0.23.14",
+    "typescript": "4.8.3"
   },
   "files": [
     "dist/",
