updated package.json scripts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "doc": "typedoc --out ./docs/utils src/**/*.ts",
     "lint": "eslint ./src --ext .ts",
     "prepublish": "npm run build",
+    "prepush:major": "npm run build",
+    "prepush:minor": "npm run build",
+    "prepush:patch": "npm run build",
     "push:major": "npm version major",
     "push:minor": "npm version minor",
     "push:patch": "npm version patch",
