--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.0.2",
+    "@types/luxon": "3.4.2",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/eslint-plugin-tslint": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
@@ -46,12 +47,17 @@
     "eslint-plugin-prettier": "4.2.1",
     "import": "0.0.6",
     "jest": "29.0.3",
+    "luxon": "3.4.4",
     "prettier": "2.7.1",
     "rimraf": "3.0.2",
     "ts-jest": "29.0.1",
     "tslint": "5.20.1",
     "typedoc": "0.23.14",
     "typescript": "4.8.3"
+  },
+  "peerDependencies": {
+    "@types/luxon": "~3.0.0",
+    "luxon": "~3.0.0"
   },
   "files": [
     "dist/",
