--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "typescript": "4.8.3"
   },
   "peerDependencies": {
-    "@types/luxon": "~3.0.0",
-    "luxon": "~3.0.0"
+    "@types/luxon": "^3.0.0",
+    "luxon": "^3.0.0"
   },
   "files": [
     "dist/",
