--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -138,6 +138,7 @@
     "@typescript-eslint/consistent-type-assertions": "warn",
     "@typescript-eslint/consistent-type-definitions": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "warn",
       {
